--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,13 @@ rvm:
   - 2.1.0
   - 2.0.0
   - 1.9.3
-  - 1.9.2
   - ruby-head
   - jruby-19mode
   - jruby-head
-  - rbx
+  - rbx-2
 matrix:
   allow_failures:
-    - rvm: rbx
+    - rvm: rbx-2
 gemfile:
   - Gemfile
 before_script:
@@ -19,7 +18,6 @@ before_script:
     case "${TRAVIS_RUBY_VERSION}" in
       rbx*)
         gem install psych
-        gem install -v '~> 2.0' rubysl
         ;;
     esac
   - rake travis:before -t
@@ -27,8 +25,8 @@ script: rake travis
 after_script:
   - rake travis:after -t
 notifications:
-  recipients:
-    - austin@rubyforge.org
   email:
-    - on_success: change
-    - on_failure: always
+    recipients:
+      - austin@rubyforge.org
+    on_success: change
+    on_failure: always
