adds ttf and otf extensions to application/font-snft
as per: http://www.iana.org/assignments/media-types/application/font-sfnt

--- a/type-lists/application.yaml
+++ b/type-lists/application.yaml
@@ -1128,6 +1128,9 @@
 - !ruby/object:MIME::Type
   content-type: application/font-sfnt
   encoding: base64
+  extensions:
+  - otf
+  - ttf
   references:
   - IANA
   - ! '[Levantovsky]'
